5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1835_2220.log
== TEST (2019-07-02 16:15:59) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[i] = max(m[0,j])
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:16:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[i] = max(i,j)
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:17:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[i] = v[i] + m[i,j]
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:28) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	v[i] = sum(i,j)
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:18:29) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	v[i] = sum(i,j)
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:19:06) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	for j in range(7):
		v[i] = sum(i,j)
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:13) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	v[i] = sum(m[i])
print(v)
	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:20:58) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
for i in range(m.shape[0]):
	v[i] = max(m[i])
print(v)

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:41) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
a = 0
for i in range(m.shape[0]):
	a = max(m[i])
print(v)

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:21:47) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
a = 0
for i in range(m.shape[0]):
	a = max(m[i])
print(a)

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:16) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
v = zeros(m.shape[0],dtype=int)
a = 0
for i in range(m.shape[0]):
	if (m[i] == max(m[i]))
print(m[i])

	


		
		
-- ERROR:
File "XXXX", line 7
    if (m[i] == max(m[i]))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:37) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	if (m[i] == max(m[i])):
print(m[i])

	


		
		
-- ERROR:
File "XXXX", line 6
    print(m[i])
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:23:52) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	if (m[i] == max(m[i])):
	print(m[i])

	


		
		
-- ERROR:
File "XXXX", line 6
    print(m[i])
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:01) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	if (m[i] == max(m[i])):
		print(m[i])

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:20) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	if (m[i,j] == max(m[i])):
		print(m[i])

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:24:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	for j in range(7):
		if (m[i,j] == max(m[i])):
			print(m[i])

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 16:25:17) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	for j in range(7):
		if (m[i,j] == max(m[i])):
			print(m[i,j])

	


		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 16:25:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
m = array(eval(input("Digite: ")))
for i in range(m.shape[0]):
	for j in range(7):
		if (m[i,j] == max(m[i])):
			print(m[i,j])

	


		
		
-- EXECUTION TIME:
1.18613
-- TEST CASE 1:
---- input:
[[34.5,67.8,89.7,56.4,65.7,78.9,81.2],[99.9,67.8,87.6,45.4,12.3,45.5,23.7],[27.5,93.1,45.9,47.3,19.2,76.5,49.3]]
---- correct output:
89.7
99.9
93.1
---- user output:
89.7
99.9
93.1
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
